--- a/frontend/sass/libs/variables.scss
+++ b/frontend/sass/libs/variables.scss
@@ -2,8 +2,7 @@
 $mobile: 767px;
 $desktop: 992px;
 $mobile-up: "only screen and (max-width: #{$mobile})";
-$desktop-up: "only screen and (min-width: #{$desktop})";
-$tablet-up: "only screen and (min-width: #{$mobile + 1px}) and (max-width: #{$desktop - 1px})";
+$tablet-up: "only screen and (min-width: #{$mobile + 1px})";
 
 // Variables couleurs
 $primary: #fd2d01;
