--- a/frontend/sass/footer-d.scss
+++ b/frontend/sass/footer-d.scss
@@ -2,7 +2,7 @@
 @import "libs/functions.scss";
 @import "libs/mixins.scss";
 
-@media #{$desktop-up} {
+@media #{$tablet-up} {
     .litlecircle {
         margin-top: 1vh;
         width: 2vw;
@@ -15,21 +15,22 @@
     .valign {line-height: 3.5vh;}
 
     footer {
-    position: fixed;
-    bottom: 0vh;
-    height: 7vh;
-    z-index: 20;
+    position: absolute;
+    bottom:-4.5vh;
+    margin-left: 0vw;
+    z-index: 40;
     & #footer_barre {
-        width: 20.5vw;
+       width: 20.5vw;
         margin-top: -7vh;
-       // margin-left: -20.5vw;
-        margin-left: 0vw;
+        margin-left: -20.5vw;
+        //margin-left: 0vw;
         padding-left: 2vw;
     }
     & #footer_rond {
     width: 3vw;
     height: 7vh;
-    margin-left: 20.5vw !important;
+   //margin-left: 20.5vw !important;
+    margin-left: 3vw;
     border-radius: 0 3.5vw 3.5vw 0;
     margin-left: 0vw;
     & #fleche_footer {
